Add some personal information in the website

--- a/built/index.html
+++ b/built/index.html
@@ -198,7 +198,7 @@
     </section>
   </main>
 
-  <footer class="bg-teal-700 text-xl text-white">
+  <footer class="bg-teal-700 text-xl text-white p-3">
     <section class="mx-auto flex max-w-4xl flex-col p-4 sm:flex-row sm:justify-between">
       <address>
         <h2>Acme Rocket-Powered Products, Inc.</h2>
@@ -216,8 +216,11 @@
       <div class="flex flex-col sm:gap-2">
         <p class="text-right">Copyright &copy; <span id="year">2022</span></p>
         <p class="text-right">All Rights Reserved</p>
+
       </div>
     </section>
+    <p class="max-w-4xl mx-auto text-center italic text-sm text-sky-500">Design with Love ❤️❤️❤️ by <a
+        href="https://www.linkedin.com/in/stanley-nouping-887683253">Nouping Nouping Richil Stanley</a> </p>
   </footer>
 
 </body>
